common-applications/control/moocstudio/openeuler/moocstudio-manager/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: moocstudio-openeuler-manager
  name: moocstudio-openeuler-manager
