common-applications/control/moocstudio/openeuler/moocstudio-manager/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: moocstudio-manager
  name: moocstudio-manager
spec:
  replicas: 0
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: moocstudio-manager
  template:
    metadata:
      labels:
        app: moocstudio-manager
    spec:
      containers:
        - env:
            - name: DB_USER
              valueFrom:
                secretKeyRef:
                  name: moocstudio-secrets
                  key: db-username
            - name: DB_PWD
              valueFrom:
                secretKeyRef:
                  name: moocstudio-secrets
                  key: db-passwd
            - name: DB_URI
              valueFrom:
                secretKeyRef:
                  name: moocstudio-secrets
                  key: db-uri
            - name: AES_KEY
              valueFrom:
                secretKeyRef:
                  name: moocstudio-secrets
                  key: aes-key
            - name: CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: moocstudio-secrets
                  key: gitee-client-secret
            - name: CLIENT_ID
              valueFrom:
                secretKeyRef:
                  name: moocstudio-secrets
                  key: gitee-client-id
            - name: OAUTH2_CALLBACK
              valueFrom:
                secretKeyRef:
                  name: moocstudio-secrets
                  key: oauth2-callback
            - name: TEMPLATE_PATH
              value: https://api.osinfra.cn/metadata/v1/metadata/infrastructure/playground-meta/templates
            - name: TZ
              value: Asia/Shanghai
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/moocstudio-manager:5e4d96b3b6e2efc1a4d1cad557d1932c2a974bd9
          imagePullPolicy: Always
          name: moocstudio-manager
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 2000m
              memory: 4000Mi
            requests:
              cpu: 1000m
              memory: 2000Mi
