common-applications/control/moocstudio/openeuler/moocstudio-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moocstudio-manager-service
  namespace: moocstudio-manager
spec:
  ports:
    - name: moocstudio-manager
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: moocstudio-manager
  type: ClusterIP
