common-applications/control/moocstudio/openeuler/moocstudio-manager/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: moocstudio-manager-ingress
  namespace: moocstudio-manager
spec:
  tls:
    - hosts:
        - moocstudio.openeuler.sh
      secretName: moocstudio-tls-secret
  rules:
    - host: moocstudio.openeuler.sh
      http:
        paths:
          - backend:
              serviceName: moocstudio-manager-service
              servicePort: 80
            path: /api(/|$)(.*)
